# IR

./: CMakeLists.txt  README.md  index_builder_app.cpp  logging.cpp  logging.h  main.cpp  search_app.cpp  test.cpp
BSBI/: bsbi.h
auxiliary/: dictionary.cpp  dictionary.h
auxiliary/tests/: test_dictionary.cpp
boolean_queries/: boolean_query.cpp  boolean_query.h  expression_tree.cpp  expression_tree.h  parser.cpp  parser.h  set_operations.cpp  set_operations.h  token.cpp  token.h  tokenization.cpp  tokenization.h
boolean_queries/tests/: tests.cpp
bsbi/: block_processor.cpp  block_processor.h  bsbi.cpp  bsbi.h  inv_index_provider.cpp  inv_index_provider.h  posting.cpp  posting.h  record.cpp  record.h  record_merger.cpp  record_merger.h
bsbi/postings/: posting.cpp  posting.h  posting_list.cpp  posting_list.h  posting_list_builder.cpp  posting_list_builder.h
bsbi/tests/: test_bsbi.cpp
common/: dictionary.cpp  dictionary.h  handler.cpp  handler.h  utils.cpp  utils.h
common/serialization/: serializable.h  serialize.h  stream_reader.h  stream_writer.h
common/serialization/tests/: tests.cpp
document/: document.cpp  document.h  document_index.cpp  document_index.h  document_reader.cpp  document_reader.h  document_reader_iterator.cpp  document_reader_iterator.h
document/tests/: tests.cpp  tests.h
search_engine/: search_engine.cpp  search_engine.h
search_engine/tests/: test.cpp
test_data/: block01.xml  block02.xml  test_data.xml
test_framework/: test_runner.h
tokenization/: filter.cpp  filter.h  tokenization.cpp  tokenization.h  word_tokenizer.cpp  word_tokenizer.h
tokenization/tests/: tests.cpp  tests.h
utils/statistics/: wiki_statistics.py
